Added, tested, worked SignService, UsersService